--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+extended-volume-manager (0.2) unstable; urgency=medium
+
+  * Added Tracker support
+
+ -- Discreete Linux Team <info@discreete-linux.org>  Wed, 23 Nov 2016 13:57:12 +0100
+
 extended-volume-manager (0.1) unstable; urgency=low
 
   * Initial Release.
