--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,23 @@
+extended-volume-manager (0.8) unstable; urgency=medium
+
+  * Improved tracker support
+
+ -- Discreete Linux Team <info@discreete-linux.org>  Thu, 08 Feb 2018 11:28:30 +0100
+
+extended-volume-manager (0.7) unstable; urgency=medium
+
+  * Ported to Python 3
+
+ -- Discreete Linux Team <info@discreete-linux.org>  Thu, 13 Jul 2017 11:19:07 +0200
+
+extended-volume-manager (0.6) unstable; urgency=medium
+
+  * Remove FPM2, replace with keepass
+  * Adapt desktop settings for Debian 9
+  * Rename icedove to thunderbird
+
+ -- Discreete Linux Team <info@discreete-linux.org>  Thu, 01 Jun 2017 11:58:44 +0200
+
 extended-volume-manager (0.5) unstable; urgency=medium
 
   * Add support for backintime
